Fixed alignment in flexboxes, added content for contact

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,11 @@
     text-align: left;
 }
 
+.flex-column li {
+    text-align: left;
+}
+
+
 .lighter-gray {
     background-color: rgb(24, 26, 27);
 }
